# ontobi

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SMOKE-TEST.md
ontobi-core/: Cargo.toml
ontobi-core/src/: lib.rs  main.rs
ontobi-core/src/endpoint/: mod.rs
ontobi-core/src/parser/: csl.rs  frontmatter.rs  mod.rs  wikilink.rs
ontobi-core/src/store/: mod.rs
ontobi-core/src/triples/: mod.rs
ontobi-core/src/watcher/: mod.rs
ontobi-core/tests/: integration.rs
