[package]
name = "ontobi-core"
version = "0.1.0"
edition = "2021"
description = "SPARQL-backed SKOS knowledge graph server for the ontobi system"
license = "MIT"

[[bin]]
name = "ontobi"
path = "src/main.rs"

[dependencies]
# RDF / SPARQL — disable RocksDB (we use in-memory store with N-Quads persistence)
oxigraph = { version = "0.4", default-features = false }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# File system traversal
walkdir = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
urlencoding = "2"
